--- a/package.json
+++ b/package.json
@@ -2,20 +2,28 @@
   "name": "express-web-starter",
   "main": "app.js",
   "version": "0.0.1",
-  "private": false,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha"
+    "test": "mocha",
+    "new:module": "node ./app/core/cmd/newModule.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
     "compression": "^1.6.1",
-    "cookie-parser": "~1.3.5",
+    "connect-image-optimus": "^0.1.3",
+    "connect-memcached": "^0.2.0",
+    "connect-mongo": "^1.1.0",
+    "connect-redis": "^3.0.2",
+    "cookie-parser": "^1.3.5",
+    "csurf": "^1.8.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
+    "helmet": "^2.0.0",
     "morgan": "~1.6.1",
     "pug": "^2.0.0-alpha6",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "session-file-store": "^0.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
